--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
             -   id: check-yaml
             -   id: check-added-large-files
     -   repo: https://github.com/psf/black
-        rev: 21.8b0
+        rev: stable
         hooks:
             -   id: black
-                language_version: python3
+                language_version: python3.8
